# vscode-v8-heap-tools

./: .gitignore  Cargo.toml  DEPENDENTS.md  README.md  pipeline.yml
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml  ci.yml
v8-heap-cli/: Cargo.toml  readme.md
v8-heap-cli/Source/: cli.rs  main.rs  summary.rs
v8-heap-parser/: Cargo.toml  LICENSE  README.md  package.json
v8-heap-parser/Documentation/: index.html  modules.html
v8-heap-parser/Source/: decoder.rs  graph.rs  lib.rs  perf.rs  wasm.rs
