[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]

[lib]
crate-type = ["cdylib", "rlib"]
path = "Source/lib.rs"

[package]
description = "A library for parsing V8 heap snapshots"
documentation = "https://docs.rs/v8-heap-parser"
edition = "2021"
exclude = ["/test", "/pkg"]
homepage = "https://github.com/microsoft/vscode-v8-heap-tools"
license-file = "LICENSE"
name = "v8-heap-parser"
version = "1.1.0"

[profile]

[profile.release]
lto = true
opt-level = 's'

[target]

[target.'cfg(target_arch = "wasm32")']

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
# print-perf = []
